Connection/Insc -> MongoDB

--- a/Prototype 1/.env
+++ b/Prototype 1/.env
@@ -1,2 +1,1 @@
-DB_URI=mongodb://localhost:27017
-CLIENT_ID=516564693282-h3hopmo2fkbb2s075814t569tof1ef4m.apps.googleusercontent.com
+DB_URI=mongodb+srv://admin:admin@energymizebd.dprvzi7.mongodb.net/
