--- a/Prototype 1/package.json
+++ b/Prototype 1/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "bootstrap": "^5.3.3",
     "dateformat": "^5.0.3",
     "dotenv": "^16.4.5",
