--- a/Prototype 1/package.json
+++ b/Prototype 1/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.5.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.13",
     "react-google-login": "^5.2.2",
     "stripe": "^15.3.0"
   },
